--- a/view/lecturer-statistics.html
+++ b/view/lecturer-statistics.html
@@ -156,7 +156,7 @@
                                 <h4 class="title">Module Details</h4>
                             </div>
                             <div class="content table-responsive table-full-width">
-                                <table class="table table-hover table-striped">
+                                <table class="table table-hover table-striped" id="module-detail-table">
                                     <tr>
                                         <td>Module Name</td>
                                         <td>Graph Theory</td>
@@ -183,7 +183,7 @@
                         <h4 class="title">Results</h4>
                     </div>
                     <div class="content table-full-width table-responsive">
-                        <table class="table">
+                        <table class="table" id="result-table">
                             <thead>
                             <tr>
                                 <td>Index</td>
