--- a/view/reception-lecturer.html
+++ b/view/reception-lecturer.html
@@ -24,10 +24,12 @@
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
+
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
 </head>
 <body>
@@ -43,7 +45,7 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/reception">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
@@ -55,7 +57,7 @@
                         <p>Manage Student</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/reception-lecturer">
                         <i class="pe-7s-users"></i>
                         <p>Manage Lecturer</p>
@@ -132,7 +134,87 @@
 
         <div class="content">
             <div class="container-fluid">
-
+                <!-- Tabs with icons on Card -->
+                <div class="card card-nav-tabs">
+                    <div class="header header-success">
+                        <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+                        <div class="nav-tabs-navigation">
+                            <div class="nav-tabs-wrapper">
+                                <ul class="nav nav-tabs" data-tabs="tabs">
+                                    <li class="active">
+                                        <a href="#register-new-lecturer" data-toggle="tab">
+                                            <i class="material-icons">person_pin</i>
+                                            New Lecturer
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#view-all" data-toggle="tab">
+                                            <i class="material-icons">view_list</i>
+                                            View All
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="register-new-lecturer">
+                                <div class="card">
+                                    <div class="content">
+                                        <form id="register-new-lecturer-form">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Name</label>
+                                                        <div class="row">
+                                                            <div class="col-sm-3">
+                                                                <select name="cn-res" class="form-control">
+                                                                    <option value="Mr">Mr</option>
+                                                                    <option value="Mrs">Mrs</option>
+                                                                    <option value="Ms">Miss</option>
+                                                                    <option value="Dr">Dr</option>
+                                                                    <option value="Prof">Prof</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class="col-sm-9">
+                                                                <input type="text" class="form-control" name="cn-name">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Email</label>
+                                                        <input type="text" class="form-control" name="cn-email">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="btn btn-info btn-fill">
+                                                Submit
+                                            </button>
+                                            <div class="clearfix"></div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="view-all">
+                                <div class="card">
+                                    <div class="content">
+                                        <table class="table" id="lecturer-table">
+                                            <tr>
+                                                <td>Name</td>
+                                                <td>Email</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -151,7 +233,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -169,21 +251,8 @@
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
+<script src="/socket.io/socket.io.js"></script>
 
-//        	demo.initChartist();
-
-        $.notify({
-            icon: 'pe-7s-gift',
-            message: "Welcome to <b>Smart Notice Board</b>"
-
-        }, {
-            type: 'info',
-            timer: 4000
-        });
-
-    });
-</script>
+<script src="js/usr/reception-lecturer.js"></script>
 
 </html>
