--- a/view/view-contact.html
+++ b/view/view-contact.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Reception</title>
+    <title>Lecturer</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -20,14 +20,16 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
-
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
 
 </head>
 <body>
@@ -38,39 +40,15 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Reception
+                    Lecturer
                 </a>
             </div>
 
             <ul class="nav">
                 <li class="active">
-                    <a href="/reception">
-                        <i class="pe-7s-home"></i>
-                        <p>Home</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/reception-student">
-                        <i class="pe-7s-id"></i>
-                        <p>Manage Student</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/reception-lecturer">
-                        <i class="pe-7s-users"></i>
-                        <p>Manage Lecturer</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/contact-detail">
+                    <a href="/manage-contact">
                         <i class="pe-7s-phone"></i>
-                        <p>Contacts</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/reception-timetable">
-                        <i class="pe-7s-timer"></i>
-                        <p>Manage Timetable</p>
+                        <p>Contact Details</p>
                     </a>
                 </li>
             </ul>
@@ -132,7 +110,22 @@
 
         <div class="content">
             <div class="container-fluid">
-
+                <div class="card">
+                    <div class="content table-full-width table-responsive">
+                        <table class="table" id="contact-detail-table">
+                            <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Designation</td>
+                                <td>Email</td>
+                                <td>Contact</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -143,7 +136,6 @@
                 </p>
             </div>
         </footer>
-
     </div>
 </div>
 
@@ -151,7 +143,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -169,21 +161,27 @@
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
+<script src="js/xlsx.full.min.js"></script>
 
-//        	demo.initChartist();
+<script src="/socket.io/socket.io.js"></script>
 
-        $.notify({
-            icon: 'pe-7s-gift',
-            message: "Welcome to <b>Smart Notice Board</b>"
-
-        }, {
-            type: 'info',
-            timer: 4000
+<script>
+    var socket = io('/contact-detail');
+    var table = document.getElementById('contact-detail-table');
+    while(table.rows.length > 1){
+        table.deleteRow(-1);
+    }
+    socket.emit('getContactDetail', function (err, res) {
+        if (err) {
+            return console.log(err);
+        }
+        res.forEach(function (contactDetail) {
+            var row = table.insertRow(-1);
+            row.insertCell(0).innerHTML = contactDetail.res + ". " + contactDetail.name;
+            row.insertCell(1).innerHTML = contactDetail.designation;
+            row.insertCell(2).innerHTML = contactDetail.email;
+            row.insertCell(3).innerHTML = contactDetail.contact;
         });
-
     });
 </script>
-
 </html>
